Fix potfolio slider alignment

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -11825,7 +11825,7 @@ label.form_input::after {
 	height: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: flex-start;
 	align-content: space-between; 
 	position: relative;
 }
